@@ -101,6 +101,7 @@ objs=   addr.o     \
 	system.o   \
 	template.o \
 	textfile.o \
+	timezone.o \
 	userlist.o \
 	vsev.o     \
 	vsevops.o  \
