@@ -79,6 +79,7 @@ objs=	addr.obj     &
 	system.obj   &
 	template.obj &
 	textfile.obj &
+	timezone.obj &
 	userlist.obj &
 	vio.obj      &
 	vsev.obj     &
